Archive2/c1/ba60f915f12735/output
+ clang++ -std=c++11 -O0 -W -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:9:5: error: no matching function for call to 'bar'
    bar(f);
    ^~~
main.cpp:5:6: note: candidate template ignored: substitution failure [with Ts = <>]: too few template arguments for class template 'foo'
void bar(foo<Ts...>) {}
     ^   ~~~
1 error generated.
